# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  Procfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_trello.py
.github/workflows/: my-ci-pipeline.yml
ansible/: .env.j2  inventory.yaml  playbook.yaml  todoapp.service
todo_app/: app.py  test_todo_app.py
todo_app/data/: item.py  mongo_db_manager.py  tasks_collection_items.py  trello_items.py  view_model.py
todo_app/templates/: add-todo-item.html  index.html  layout.html  table.html
todo_app/tests/: conftest.py  incomplete_test_e2e.py  tasks_collection_mock_data.json  test_integration.py  test_todo_app.py  test_unit.py  test_utils.py  trello_cards_mock_data.json  utils.py
