[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
urllib3 = "<2.0"
gunicorn = "^21.2.0"
pymongo = {extras = ["srv"], version = "^4.6.1"}
mongomock = "^4.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
selenium = "^4.11.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
